removed label focus

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 		<h2>Game of Life Controls</h2>
 
 		<div class="control-group">
-			<label for="gridSize">Grid Size</label>
+			<label>Grid Size</label>
 			<input type="range" id="gridSize" min="5" max="80" value="16">
 			<span id="gridSizeValue">16x16</span>
 		</div>
 
 		<div class="control-group">
-			<label for="speed">Growth Rate</label>
+			<label>Growth Rate</label>
 			<input type="range" id="speed" min="1" max="15" value="7" step="0.25">
 			<span id="speedValue">7</span>
 		</div>
 
 		<div class="control-group">
-			<label for="coverageSlider">Coverage</label>
+			<label>Coverage</label>
 			<input type="range" id="coverageSlider" min="0" max="1" step="0.01" value="0.4">
 			<span id="coverageValue">40%</span>
 		</div>
